# pipeek

./: README.md  __main__.py  main.py  pyproject.toml  setup.py
.github/workflows/: publish.yml
pipeek/: __main__.py  _main.py  cli.py  config.json  const_def.py  main.py  src.py
