[project]
name = "pipeek"
version = "0.1.0"
description = "Pattern finder"
authors = [{ name = "Danilo Patrial" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorama",
    "click",
    "platformdirs"
]

[project.scripts]
pipeek = "pipeek.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"